--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.52.0",
     "clsx": "^2.1.1",
     "lottie-react": "^2.4.1",
     "next": "15.3.4",
