--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@supabase/supabase-js": "^2.52.0",
     "clsx": "^2.1.1",
     "lottie-react": "^2.4.1",
+    "lucide-react": "^0.525.0",
     "next": "15.3.4",
     "ogl": "^1.0.11",
     "react": "^19.0.0",
